# c-base

./: .gitmodules  CMakeLists.txt  README.md  build
.devcontainer/: devcontainer.json
inc/: example.h
src/: CMakeLists.txt  example.c  main.c
test/: CMakeLists.txt  example-test.cpp
tests/: CMakeLists.txt  example-test.cpp
